added real Locust test fixed equality and hash for CalendarClass added new unitTests integrating SureFire and Allure